Fixed sizing and font issues on mobile

--- a/site/css/_circles.scss
+++ b/site/css/_circles.scss
@@ -4,22 +4,13 @@ $sun-y: 13;
 
 $orbit-w: 4px;
 
-// index radius x-pos y-pos font-size
-$circles:
-    1  10vmin  $sun-x $sun-y 4vmin, // Home
-    2   5vmin  30vmin 30vmin 2.5vmin, // About
-    3   4vmin  35vmin 50vmin 2.3vmin, // Blog
-    4   6vmin  20vmin 75vmin 2.8vmin, // Projects
-    5   8vmin  80vmin 50vmin 3vmin, // Animations
-    6   5vmin  85vmin 80vmin 2.2vmin; // Models
-
 // index radius r θ font-size
-$circles2:
-    1  10  0   0  4vmin, // Home
-    2   5  28  45 2.5vmin, // About
-    3   4  46  60 2.3vmin, // Blog
-    4   6  65  80 2.8vmin, // Projects
-    5   8  80  20 3vmin, // Animations
-    6   5  100 45 2.2vmin; // Models
+$circles:
+    1  10  0   0  4,   // Home
+    2   5  28  45 2.5, // About
+    3   4  46  60 2.3, // Blog
+    4   6  65  80 2.8, // Projects
+    5   8  80  20 3,   // Animations
+    6   5  100 45 2.2; // Models
 
 $circle-expand: 1.3;
