--- a/site/css/_footer.scss
+++ b/site/css/_footer.scss
@@ -26,6 +26,10 @@ $footer-height: 50px;
             align-self: flex-end;
 
             margin: 10px;
+
+            @media screen and (max-width: 400px) {
+                font-size: 13px;
+            }
         }
     }
     &-icons {
@@ -33,6 +37,10 @@ $footer-height: 50px;
         flex-direction: row;
 
         justify-content: center;
+
+        @media screen and (max-width: 600px) {
+            display: none;
+        }
     }
 }
 
